src/objects/Billing_Group__c.object
<CustomObject>
    <description>Object supports the ability to group accounts for billing by contract.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Groups</relationshipLabel>
        <relationshipName>Billing_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>contract__r.ContractNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Address_Line1__c</fullName>
        <label>Group Address Line1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Address_Line2__c</fullName>
        <label>Group Address Line2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Address_Line3__c</fullName>
        <label>Group Address Line3 (ICo)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_City__c</fullName>
        <label>Group City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Postal_Code__c</fullName>
        <label>Group Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_State__c</fullName>
        <label>Group State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pseudo_Contract__c</fullName>
        <label>Pseudo Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>If Start Date is Unknown, please select the contract Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <inlineHelpText>If Sop Date is Unknown, please select the contract End Date</inlineHelpText>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contract</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Select Contract Related to Business Customer by Name &amp; ContractNumber only</errorMessage>
            <filterItems>
                <field>Contract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Searches only Related Contracts by Name &amp; ContractNumber only</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Billing Groups</relationshipLabel>
        <relationshipName>Billing_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Billing Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>GMCWIN10</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>